cert/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openliberty-daytrader-git
    app.kubernetes.io/component: openliberty-daytrader-git
    app.kubernetes.io/instance: openliberty-daytrader-git
    app.kubernetes.io/name: openliberty-daytrader-git
    app.kubernetes.io/part-of: openliberty-daytrader-app
  name: openliberty-daytrader-git
spec:
  ports:
  - name: 9080-tcp
    port: 9080
    protocol: TCP
    targetPort: 9080
  - name: 9443-tcp
    port: 9443
    protocol: TCP
    targetPort: 9443
  selector:
    app: openliberty-daytrader-git
    deploymentconfig: openliberty-daytrader-git
  sessionAffinity: None
  type: ClusterIP
