cert/route-edge.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openliberty-daytrader-git
    app.kubernetes.io/component: openliberty-daytrader-git
    app.kubernetes.io/instance: openliberty-daytrader-git
    app.kubernetes.io/name: openliberty-daytrader-git
    app.kubernetes.io/part-of: openliberty-daytrader-app
  name: daytrader-tls-edge
spec:
  path: /daytrader
  port:
    targetPort: 9080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: openliberty-daytrader-git
    weight: 100
  wildcardPolicy: None
