cert/route-passthru.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openliberty-daytrader-git
    app.kubernetes.io/component: openliberty-daytrader-git
    app.kubernetes.io/instance: openliberty-daytrader-git
    app.kubernetes.io/name: openliberty-daytrader-git
    app.kubernetes.io/part-of: openliberty-daytrader-app
  name: daytrader-tls-passthru
spec:
  port:
    targetPort: 9443-tcp
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: openliberty-daytrader-git
    weight: 100
  wildcardPolicy: None
